--- a/cic2024/index.Rmd
+++ b/cic2024/index.Rmd
@@ -51,12 +51,9 @@ knitr::include_graphics("umsnh100a.jpg")
 
 # (abstract) Resumen ejecutivo del proyecto
 
-En el presente proyecto de investigación se propone el desarrollo de un algoritmo de inteligencia artificial para la cobertura sintética para cubrir el precio de compra (venta) del precio nacional del aguacate Hass, el limon, la zarzamora y el maíz producidos en el Estado de Michoacán.
-
-Para desarrollar dicha cobertura sintética se propone replicar el esquema de precios de garantía de SEGALMEX en las que este organismo del Gobierno Federal adquiere coberturas del maíz, trigo y arroz en las bolsas de derivados de Chicago y Nueva York. Esto a fin de ofrecer una cobertura (precios de garantía) de dichas mercancías a los productores mexicanos. Partiendo de esta necesidad práctica (cobertura del precio del aguacate, limón, zarzamora y maíz), se propone en este proyecto de investigación el desarrollo y prueba de un algoritmo de inteligencia artificial que permita diseñar y seleccionar un portafolio óptimo de opciones de los principales futuros agrícolas de las bolsas de derivados de Chicago y Nueva York. 
-
-El objetivo fundamental del presente proyecto es demostrar la viabilidad material y factibilidad de los algoritmos para lograr las coberturas sintéticas que podrían diseñar SEGALMEX para ofrecer un precio de garantía del precio nacional del aguacate, el limon, la zarzamora y el maíz producidos en Michoacán.
-
+En el presente proyecto de investigación se propone el desarrollo de un algoritmo de inteligencia artificial de una cobertura sintética para cubrir el precio de compra (venta) del precio nacional del aguacate, el limón, la zarzamora y el maíz producidos en el Estado de Michoacán.
+Para desarrollar dicha cobertura sintética se propone replicar el esquema de precios de garantía de SEGALMEX en las que este organismo del Gobierno Federal adquiere coberturas del maíz, trigo y arroz en las bolsas de derivados de Chicago y Nueva York. Esto a fin de ofrecer una cobertura (precios de garantía) de estas 4 mercancías a los productores michoacanos. Partiendo de esta necesidad práctica (cobertura del precio del aguacate, limón, zarzamora y maíz), se propone en este proyecto de investigación el desarrollo y prueba de un algoritmo de inteligencia artificial bayesiana que permita diseñar y seleccionar un portafolio óptimo de opciones de los principales futuros agrícolas de las bolsas de derivados de Chicago y Nueva York. 
+El objetivo fundamental del presente proyecto es demostrar la viabilidad material y factibilidad de los algoritmos para lograr las coberturas sintéticas que podría diseñar SEGALMEX para ofrecer un precio de garantía del precio nacional del aguacate, el limón, la zarzamora y el maíz producidos en Michoacán.
 El presente proyecto se espera impacte en el desarrollo económico del Estado de Michoacán, así como en la soberanía y seguridad alimentaria en México (PRONACE de CONACyT).
 
 # Características del proyecto
@@ -83,7 +80,7 @@ El que los productores de aguacate, limón, zarzamora y maíz del Estado de Mich
 
 2. Que el Gobierno Estatal, en este caso, el Federal puedan tener un mecanismo de cobertura del precio del aguacate, abonaría establecer mecanismos para regular el mercado de alimentos básicos.
 
-SEGALMEX puede ofrecer coberturas de precio y cosecha a pequeños y medianos productores de arroz, frijol, leche, maíz y trigo. Para lograr esto, el organismo se vale de la adquisición de coberturas del precio internacional de estas mercancías en la Bolsa de Derivados de Chicago (CBOT). En específico adquiere opciones que le permitan trasladar el riesgo del precio pactado al emisor de dichas coberturas, a efecto de cubrir el diferencial del precio pactado y el de mercado.
+SEGALMEX puede ofrecer coberturas de precio y cosecha a pequeños y medianos productores de arroz, frijol, leche, maíz y trigo. Para lograr esto, el organismo se vale de la adquisición de coberturas del precio internacional de estas mercancías en las Bolsas de Derivados de Chicago (CBOT) y Nueva York (NYMEX). En específico adquiere opciones que le permitan trasladar el riesgo del precio pactado al emisor de dichas coberturas, a efecto de cubrir el diferencial del precio pactado y el de mercado.
 
 Dado que el aguacate, el limón y la zarzamora no son mercancías o commoditties con amplia negociación y liquidez como son el maíz, el trigo o el arroz, no existe interés ni necesidad en el CBOT o del NYMEX de emitir coberturas (opciones) relacionadas a estos. Para poder solventar esta necesidad se pueden realizar coberturas sintéticas. Este tipo de coberturas se logra mediante un portafolio de futuros u opciones cuyo valor replique el precio de estas mercancía (aguacate, limón o zarzamora o maíz).
 
@@ -91,11 +88,11 @@ El objetivo de este proyecto es diseñar y probar algoritmos de inteligencia art
 
 ## Beneficiarios del proyecto de investigación
 
-Los beneficiarios de este proyecto de investigación serán los productores y comercializadores de aguacate, limón, zarzamora y maíz del estado de Michoacán quienes, potencialmente, podrían contar con mecanismos de coberturas o precios de garantía sobre el aguacate que producen. Esto con la finalidad de reducir volatilidad en sus ingresos.
+Los beneficiarios de este proyecto de investigación serán los productores y comercializadores de aguacate, limón, zarzamora y maíz del estado de Michoacán quienes, potencialmente, podrían contar con mecanismos de coberturas o precios de garantía sobre los bienes que producen o cmercializan. Esto con la finalidad de reducir volatilidad en sus ingresos.
 
 De manera complementaria, el Gobierno del Estado de Michoacán se podría ver beneficiado en materia de ingresos por dos canales:
 
-1. A mayores beneficios de los productores y comercializadores de aguacate en Michoacán, mayor será la base tributaria que el Gobierno Estatal y Federal pueden tener. Esto impactará en una **adecuada adminsitración de riesgos financieros y reducción de la deuda de Michoacán** (objetivo expresado en el PLADIEM).
+1. A mayores beneficios de los productores y comercializadores de aguacate en Michoacán, mayor será la base tributaria que el Gobierno Estatal y Federal pueden tener. Esto impactará en una **adecuada administración de riesgos financieros y reducción de la deuda de Michoacán** (objetivo expresado en el PLADIEM).
 2. Como resultado del deseo de participar en este programa de coberturas, el Gobierno Federal y el Gobierno Estatal podrán tener mayor evidencia documental de las ventas de aguacate que productores y empacadores podrán tener, al ser ingresos declarados aquellos que se están cubriendo con estas coberturas sintéticas.
 
 De una manera indirecta, **la población vulnerable en condiciones de pobreza y aquella población vulnerable por incidencias del crimen organizado pueden beneficiarse ya que una mayor producción de aguacate, así como una mayor estabilidad en el ingreso, permitirá impactar positivamente en el pilar de ingresos del índice de desarrollo humano o IDH [@PNUD1991] y, conforme lo ha demostrado Yoo [-@Yoo2022], a mayor producción (y mayor estabilidad en los ingresos) de aguacate, menor incidencia de homicidios y violencia (-0.65 \% menos homicidios por cada 100 toneladas de aguacate producidas).**
@@ -141,7 +138,7 @@ Para poder ofrecer las coberturas mediante su programa de precios de garantía p
 
 Actualmente la bolsa de futuros de mercancías  de Chicago (CBOT) es propiedad de un grupo de bolsas propiedad de la bolsa de mercancías de Chicago (*Chicago Mercantile Exchange* o CME). Dentro de las bolsas que posee este conglomerado, también se encuentra la bolsa de mercancías de Nueva York (New York Mercantile Exchange o NYMEX). Esta también negocía futuros y opciones de mercancías agricolas como son el café arábiga, azúcar refinada, cacao (cocoa) y jugo de naranja (por hablar de algunas de las coberturas de mercancías agrícolas comestibles). Estas coberturas pueden ser de interés para los fines que se exponen a continuación.
 
-Dado que el aguacate, limón, zarzamora y maíz producido en Michoacán no son mercancías o *commoditties* con amplia negociación y liquidez como son el maíz, el trigo o el arroz, no existe interés ni necesidad en el CBOT o del NYMEX de emitir coberturas (futuros u opciones) relacionadas al aguacate Hass u otra variedades. Para poder solventar esta necesidad se pueden realizar **coberturas sintéticas**. Este tipo de coberturas se logra mediante un portafolio de futuros u opciones cuyo comportamiento en su valor replique el valor o mercancía (en este caso el precio nacional del aguacate procedente de Michoacán). 
+Dado que el aguacate, limón, zarzamora y maíz producido en Michoacán no son mercancías o *commoditties* con amplia negociación y liquidez como son el maíz, el trigo o el arroz, no existe interés ni necesidad en el CBOT o del NYMEX de emitir coberturas (futuros u opciones) relacionadas al aguacate Hass u otras variedades. Para poder solventar esta necesidad se pueden realizar **coberturas sintéticas**. Este tipo de coberturas se logra mediante un portafolio de futuros u opciones cuyo comportamiento en su valor replique el valor o mercancía (aguacate, limón, zarzamora o maíz michoacanos). 
 
 Esto se logra con técnicas de administración de valores y pasivos (conocida como *Asset-liability management*) en donde se determina un índice o precio de referencia cuyo comportamiento debe ser replicado con un portafolio de valores [@Scherer2007;@Ziemba2003;@Maginn2007b;@Waring2004b].
 
@@ -252,8 +249,8 @@ Por cuestiones de espacio en el formulario del SIIA web de la UMSNH se resumiero
 
 ## Metas presentadas en formulario del SIIA web de la UMSNH
 
-1) Simular y demostrar que el utilizar coberturas sintéticas (portafolios de opciones de mercancías agrícolas de las bolsas de Nueva York y Chicago) permite generar una mayor productividad o beneficios a los productores o comerciallizadores de aguacate, limón, zarzamora y maíz de Michoacán. Esto en 2 escenarios.
-2) Desarrollar bases de datos (actualizables de manera automática) y aplicaciones en línea para que, tanto los resultados de las simulaciones como los algoritmos de toma de decisiones de estos 4 productos agrícolas, para que puedan estar disponibles de forma gratuita para productores, comercializadores y SEGALMEX
+1) Simular y demostrar que el utilizar coberturas sintéticas (portafolios de opciones de mercancías agrícolas de las bolsas de Nueva York y Chicago) permite generar una mayor productividad o beneficios a los productores o comercializadores de aguacate, limón, zarzamora y maíz de Michoacán. 
+2)Desarrollar bases de datos (actualizables de manera automática) y aplicaciones en línea para que, tanto los resultados de las simulaciones como los algoritmos de toma de decisiones de estos 4 productos agrícolas, para que puedan estar disponibles de forma gratuita para productores, comercializadores y SEGALMEX
 3) Publicar resultados en revistas científicas y congresos académicos.
 
 ## Metas expuestas a detalle para la mesa revisora de la CIC-UMSNH (metas oficiales)
@@ -284,10 +281,12 @@ El cumplimiento de esta meta permitirá tener un código que ejecute, mensualmen
 
 Como resultado de los objetivos planteados en el presente proyecto de investigación, así como de las metas que de los mismos surgen, se presentan los siguientes entregables:
 
-1. Publicación de al menos dos artículos en una revista científica indizada en Scopus o la Web of Science. El compromiso, dados los tiempos de financiamiento del proyecto, es tener en proceso de revisión o, preferentemente aceptado, el artículo. Para lograr esto, es que se planteará el publicar el artículo en alguna revista académica indizada a Scopus o la Web of Science que opere en el esquema de *open access*. Esto permitirá que los tiempos de revisión y editoriales sean más cortos. Ante esto, como se verá en el apartado del [desglose financiero](#Desglose), se contempla el pago de publicaciones de artículos.
-2. La publicación y actualización periódica de los resultados de las simulaciones en una aplicación en línea en el sitio web del Dr. Oscar De la Torre Torres. Esto requerirá, como se verá en el [desglose financiero](#Desglose).
-3. El desarrollo y publicación de una función en R y una en Python que permita acceder a los precios históricos de las principales frutas y hortalizas monitoreadas por el SNIIM. Actualmente el SNIIM solo funciona con una interfaz visual en su sitio web. Con este entregable se pretende que exista una función que permita a más investigadoras e investigadores acceder fácilmente a las bases de datos del SNIIM con esta función. El objetivo es publicarla como una función de fuente abierta y acceso gratuito. La misma se publicará en los repositorios de GitHub y de PyPI.
-4. El apoyo al desarrollo de 1 tesis de doctorado. Actualmente se tiene en curso 1 tesis de doctorado que buscan relacionar el sentimiento negativo y positivo en las noticias y redes sociales con los precios del maíz y del café. Esto para desarrollar algoritmos de coberturas de estas mercancías con opciones de las bolsas de Chicago y Nueva York. Es decir, desarrollar algoritmos que permitan a SEGALMEX y a los productores o comercializadores de aguacate determinar los momentos de cobertura necesarios. Por los tiempos de duración del proyecto de investigación propuesto, no se logrará la titulación de alguna de estas 2 tesis doctorales, debido a que los 2 sustentantes les falta 1.5 y 3.5 años para terminar su tesis y plan de estudios en el [Doctorado en Administración de la Facultad de Contadudía y Ciencias Administrativas de la UMSNH](https://www.fcca.umich.mx/doctorado/). A pesar de esto, el presente proyecto apoyará a los requerimientos de infraestructura informática para el logro de resultados en estas dos tesis de investigación:
+1. Publicación de al menos dos artículos en revistas científicas indizada en Scopus o la Web of Science. El compromiso, dados los tiempos de financiamiento del proyecto, es tener en proceso de revisión o, preferentemente aceptado, el artículo. Para lograr esto, es que se planteará el publicar el artículo en alguna revista académica indizada a Scopus o la Web of Science que opere en el esquema de "open access". Esto permitirá que los tiempos de revisión y editoriales sean más cortos. 
+2. La publicación y actualización periódica de los resultados de las simulaciones en una aplicación en línea en el sitio web del Dr. Oscar De la Torre Torres. Esto requerirá, como se verá en el desglose financiero.
+3. El desarrollo y publicación de una función en R y una en Python que permita acceder a los precios históricos de las principales frutas y hortalizas monitoreadas por el SNIIM. Actualmente el SNIIM solo funciona con una interfaz visual en su sitio web. Con este entregable se pretende que exista una función que permita a más investigadoras e investigadores acceder fácilmente a las bases de datos del SNIIM con esta función. El objetivo es publicarla como una función de fuente abierta y acceso gratuito. 
+4. Publicación de apps en línea que diseñen y publiquen la cobertura sintética y sugieran si es sugerente o no realizar dicha cobertura. Esto servirá a productores, comercializadores y a SEGALMEX.
+5. Ponencias en al menos 4 congresos de investigación.
+6. El apoyo al desarrollo de 1 tesis de doctorado. Actualmente se tiene en curso 1 tesis de doctorado que buscan relacionar el sentimiento negativo y positivo en las noticias y redes sociales con los precios del maíz y del café. Esto para desarrollar algoritmos de coberturas de estas mercancías con opciones de las bolsas de Chicago y Nueva York. Es decir, desarrollar algoritmos que permitan a SEGALMEX y a los productores o comercializadores de aguacate determinar los momentos de cobertura necesarios. Por los tiempos de duración del proyecto de investigación propuesto, no se logrará la titulación de alguna de estas 2 tesis doctorales, debido a que los 2 sustentantes les falta 1.5 y 3.5 años para terminar su tesis y plan de estudios en el [Doctorado en Administración de la Facultad de Contadudía y Ciencias Administrativas de la UMSNH](https://www.fcca.umich.mx/doctorado/). A pesar de esto, el presente proyecto apoyará a los requerimientos de infraestructura informática para el logro de resultados en estas dos tesis de investigación:
 
   - **Factores de índices de sentimiento de mercado que inciden en la estimación de precios de referencia del maíz blanco en México y su cobertura con opciones de la Bolsa de derivados de Chicago a través de un algoritmo de toma de decisiones con precios de garantía de SEGALMEX**. Sustentante: M.C. Rodolfo Adrían López Torres (Doctorado en Administración FCCA-UMSNH). Generación 2021-2025.
 
@@ -334,13 +333,19 @@ Al resolver este problema de optimización se determinará el nivel óptimo $\ma
 
 ## Infraestructura con la que se cuenta actualmente para realizar el proyectos de investigación.
 
-Para lograr las metas planteadas en el apartado de [Metas del proyecto de investigación](#Metas), así como el de [Entregables comprometidos](#Entregables) que llevarán a la consecución de los objetivos del presente proyecto, se cuenta con infraestructura tecnológica suficiente, la cual se ha adquirido con proyectos de investigación previos como son los de Apoyo a nuevo PTC de PRODEP-SEP o los propios proyectos de investigación financiados, desde el año 2016, al sustentante de este proyecto. Esto último por parte de la Coordinación de la Investigación Científica (CIC) de la Universidad Michoacana de San Nicolás de Hidalgo (UMSNH). La infraestructura es la siguiente:
+Para lograr las metas planteadas en los apartados de objetivos, Metas y entregables en el proyecto de investigación, se cuenta con infraestructura tecnológica suficiente, la cual se ha adquirido con proyectos de investigación previos como son los de Apoyo a nuevo PTC de PRODEP-SEP o los propios proyectos de investigación financiados, por parte de la Coordinación de la Investigación Científica (CIC) de la Universidad Michoacana de San Nicolás de Hidalgo (UMSNH), desde el año 2016, al sustentante de este proyecto. La infraestructura con que actualmente se cuenta es la siguiente:
 
 1. Computadora Mac Pro con procesador Intel Xeon de 3.5 GHz y 6 núcleos, 16 GB de memoria RAM, tarjeta gráfica AMD FirePro de 3GB y 120GB de disco duro en estado sólido. Esta computadora es la que se utiliza para hacer la parte más larga y amplia de las simulaciones de este proyecto de investigación y otros que le han antecedido. Los resultados de las simulaciones realizadas con esta computadora se actualizan, de manera diaria, en la siguiente computadora.
 2. Computadora iMac con procesador Intel Core de 1.5 GHz y 2 núcleos, 18 GB de memoria RAM, tarjeta gráfica Intel Graphics de 3de 1.5 GB y 120GB de disco duro en estado sólido. Esta computadora es la que actualizará, de manera diaria o mensual (Según sea el caso) los datos de las simulaciones del presente proyecto.
-3. Lenguajes de programación R y Python executados tanto en Rstudio como en Jupiter Networks. Esto para programar y ejecutar los CRONES que, de manera automática, actualizan las simulaciones realizadas.
-4. Una licencia de Shiny apps para la publicación de las aplicaciones interactivas en línea con los resultados de las simulaciones previas. Esta se paga actualmente con recursos propios del Dr. Oscar V. De la Torre Torres (la CIC de la UMSNH actualmente no le puede apoyar con este rubro al cambiar las reglas de operación federales, relativas a los recursos financieros de los proyectos de la CIC) y se pretende financiar las mismas con recursos del presente proyecto.
-5. Una licencia de las bases de datos económicos, financieras y de futuros Refinitiv Eikon y Economatica que actualmente paga el Dr. Oscar V. De la Torre Torres con recursos propios (la CIC de la UMSNH actualmente no le puede apoyar con este rubro al cambiar las reglas de operación federales, relativas a los recursos financieros de los proyectos de la CIC). Se pretende financiar estas bases de datos con los recursos del presente proyecto de investigación.
+3. Lenguajes de programación R y Python ejecutados tanto en Rstudio como en Jupiter Networks. Esto para programar y ejecutar los CRONES que, de manera automática, actualizan las simulaciones realizadas.
+4. Una licencia de Shiny apps para la publicación de las aplicaciones interactivas en línea con los resultados de las simulaciones previas. Esta se paga actualmente con recursos propios del Dr. Oscar V. De la Torre Torres (la CIC de la UMSNH actualmente no le pueden apoyar con este rubro) y se pretende financiar las mismas con recursos de un potencial proyecto concurrente financiado por ICTI en 2024 (propuesta de investigación en proceso de evaluación por ICTI).
+5. Una licencia de las bases de datos económicos, financieras y de futuros Refinitiv Eikon y Economatica que actualmente paga el Dr. Oscar V. De la Torre Torres con recursos propios (la CIC de la UMSNH actualmente no le puede apoyar con este rubro).
+
+Esta infraestructura permitirá la ejecución de las simulaciones, así como la estimación de los algoritmos de inteligencia artificial que permitirán diseñar y proponer la cobertura sintética de los precios de los 4 productos agrícolas de interés (aguacate, limón, zarzamora y maíz).
+
+Para consultar la infraestructura a detalle y el diagrama de la arquitectura informática que se tiene, favor de consultar www.oscardelatorretorres.com/cic2024
+
+**NOTA**: se espera este proyecto tenga concurrencia con un proyecto de ICTI en el PCIR 2023 (propuesta en proceso de evaluación).
 
 Para conocer a mayor detalle la infraestructura que se tiene, se presenta la Figura 1 con la arquitectura informática con la que se cuenta para la ejecución material del presente proyecto de investigación.
 
@@ -357,7 +362,7 @@ Ya que se presentó la metodología para realizar el presente proyecto de invest
 
 # Presupuesto o planeación financieroa del proyecto{#Desglose}
 
-En el Cuadro 1 siguiente se detallan los rubros a financiar para la ejecución del proyecto de investigación. Como se puede apreciar, se solicita un monto total de \$ 152,334.00, de los cuales 76.769\%  está destinado al rubro de software especializado que es la adquisición de licencias temporales de aplicaciones informáticas en línea y APIs que permitirán acceder a las bases de datos de información financiera y de noticias históricas necesarias para las simulaciones.
+En el Cuadro 1 siguiente se detallan los rubros a financiar para la ejecución del proyecto de investigación. Como se puede apreciar, se solicita un monto total de \$ 79,000.00 por los 2 años (\$39,500.00 para el año 2024 y \$39,500 para el año 2025).
 
 ```{r cuadro1, echo=FALSE, error=FALSE, warning=FALSE, message=FALSE}
 prespuesto1=read.xlsx("presupuesto.xlsx",sheet="presupuesto")
